<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".firstscreen">


    <TextView
        android:id="@+id/tv_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/registration_form"
        android:textSize="25sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">

        <EditText
            android:id="@+id/edt_first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:hint="@string/first_name"
            android:inputType="text"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/edt_last_name"
            style="@style/textviewstyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:hint="@string/last_name"
            android:inputType="text"
            android:textSize="15sp" />
    </LinearLayout>

    <EditText
        android:id="@+id/et_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/address"
        android:inputType="text"
        android:textSize="12sp" />

    <EditText
        android:id="@+id/et_phonenumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/phonenumber"
        android:inputType="number"
        android:textSize="12sp" />

    <EditText
        android:id="@+id/et_per"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_your_grade"
        android:inputType="text"
        android:textSize="12sp" />

    <EditText
        android:id="@+id/et_dob"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_dob"
        android:inputType="date"
        android:textSize="12sp" />

    <EditText
        android:id="@+id/et_applicantuser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_user_name"
        android:inputType="text"
        android:textSize="12sp" />
    <EditText
        android:id="@+id/et_applicantpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/create_password"
        android:inputType="textPassword"
        android:textSize="12sp" />



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="12sp">

        <Button
            android:id="@+id/bt_register"
            style="@style/btnstyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/register" />

        <Button
            android:id="@+id/bt_cancel"
            style="@style/btnstyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel" />
    </LinearLayout>
</LinearLayout>
