<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".firstscreenfirst"
    android:background="@drawable/background">

    <TextView
        android:id="@+id/tv_user"
        style="@style/textviewstyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/profiling"
        android:textSize="20sp" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bt_login"
        android:hint="@string/login"
        style="@style/btnstyle"
        android:gravity="center"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/tv_or"
        style="@style/textviewstyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/or"
        android:textSize="12sp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bt_Signup"
        android:hint="@string/sign_up"
        style="@style/btnstyle"
        android:gravity="center"
        android:textSize="16sp"/>
</LinearLayout>