<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:padding="3sp"
    android:background="@drawable/background">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tv_welcome"
        android:hint="@string/welcome_to_the_bhaktapur_college"
        android:textSize="25sp"
        android:gravity="center"
        android:textColor="@android:color/holo_green_light"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tv_temple"
        android:hint="@string/a_temple_of_learing"
        android:textSize="15sp"
        android:gravity="center"
        android:background="@android:color/holo_green_light"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/click_to_proceed"
        android:textSize="15sp"
        android:gravity="center"
        android:id="@+id/bt_proceed"
        android:shadowColor="@android:color/holo_green_dark"
        android:background="@drawable/selector"/>

</LinearLayout>